kept JS at bottom

--- a/index.html
+++ b/index.html
@@ -1,215 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loan Interest and Principal Calculator</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-        }
-        label {
-            display: block;
-            margin-top: 10px;
-        }
-        input, button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 5px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: center;
-        }
-        th {
-            background-color: #f4f4f4;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+      }
+      .container {
+        max-width: 600px;
+        margin: 0 auto;
+      }
+      label {
+        display: block;
+        margin-top: 10px;
+      }
+      input,
+      button {
+        width: 100%;
+        padding: 10px;
+        margin-top: 5px;
+      }
+      table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+      }
+      th,
+      td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: center;
+      }
+      th {
+        background-color: #f4f4f4;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>Loan Interest and Principal Calculator</h1>
-        <form id="loanForm">
-            <label for="principal">Principal Amount:</label>
-            <input type="number" id="principal" placeholder="Enter principal amount" required value="3500000">
+      <h1>Loan Interest and Principal Calculator</h1>
+      <form id="loanForm">
+        <label for="principal">Principal Amount:</label>
+        <input
+          type="number"
+          id="principal"
+          placeholder="Enter principal amount"
+          required
+          value="3500000"
+        />
 
-            <label for="rate">Rate of Interest (Annual %):</label>
-            <input type="number" id="rate" placeholder="Enter rate of interest" required value="9.7">
+        <label for="rate">Rate of Interest (Annual %):</label>
+        <input
+          type="number"
+          id="rate"
+          placeholder="Enter rate of interest"
+          required
+          value="9.7"
+        />
 
-            <label for="years">Number of Years:</label>
-            <input type="number" id="years" placeholder="Enter number of years" required value="15">
+        <label for="years">Number of Years:</label>
+        <input
+          type="number"
+          id="years"
+          placeholder="Enter number of years"
+          required
+          value="15"
+        />
 
-            <button type="button" onclick="calculate()">Calculate</button>
-        </form>
-        <div id="chartContainer" style="margin-top: 20px;">
-           
-        </div>
-        <table id="resultTable" style="display: none;">
-            <thead>
-                <tr>
-                    <th>Year</th>
-                    <th>Interest</th>
-                    <th>Principal</th>
-                </tr>
-            </thead>
-            <tbody id="resultBody"></tbody>
-        </table>
-        <div>
-            <!-- show total paid Interest-->
+        <button type="button" onclick="calculate()">Calculate</button>
+      </form>
+      <div id="chartContainer" style="margin-top: 20px"></div>
+      <table id="resultTable" style="display: none">
+        <thead>
+          <tr>
+            <th>Year</th>
+            <th>Interest</th>
+            <th>Principal</th>
+          </tr>
+        </thead>
+        <tbody id="resultBody"></tbody>
+      </table>
+      <div>
+        <!-- show total paid Interest-->
         <p>Total Paid Interest: <b id="totalInterest">0</b></p>
-            <!-- show total paid Principal-->
-        </div>
+        <!-- show total paid Principal-->
+      </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-        function drawGraph(principal, rate, years) {
-            const interestData = [];
-            const principalData = [];
-            let remainingPrincipal = principal;
+      function drawGraph(principal, rate, years) {
+        const interestData = [];
+        const principalData = [];
+        let remainingPrincipal = principal;
 
-            const monthlyRate = rate / (12 * 100);
-            const months = years * 12;
-            const emi = (principal * monthlyRate * Math.pow(1 + monthlyRate, months)) / (Math.pow(1 + monthlyRate, months) - 1);
+        const monthlyRate = rate / (12 * 100);
+        const months = years * 12;
+        const emi =
+          (principal * monthlyRate * Math.pow(1 + monthlyRate, months)) /
+          (Math.pow(1 + monthlyRate, months) - 1);
 
-            for (let month = 1; month <= months; month++) {
-                const interest = remainingPrincipal * monthlyRate;
-                const principalComponent = emi - interest;
+        for (let month = 1; month <= months; month++) {
+          const interest = remainingPrincipal * monthlyRate;
+          const principalComponent = emi - interest;
 
-                interestData.push(interest.toFixed(2));
-                principalData.push(principalComponent.toFixed(2));
+          interestData.push(interest.toFixed(2));
+          principalData.push(principalComponent.toFixed(2));
 
-                remainingPrincipal -= principalComponent;
-            }
-
-            const ctx = document.createElement('canvas');
-            ctx.id = 'loanChart';
-            document.querySelector('#chartContainer').appendChild(ctx);
-
-            new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: Array.from({ length: months }, (_, i) => `Month ${i + 1}`),
-                    datasets: [
-                        {
-                            label: 'Interest',
-                            data: interestData,
-                            borderColor: 'rgba(139, 0, 0, 1)',
-                            backgroundColor: 'rgba(139, 0, 0, 0.8)',
-                            stack: 'Stack 0',
-                        },
-                        {
-                            label: 'Principal Component',
-                            data: principalData,
-                            borderColor: 'rgba(0, 0, 139, 1)',
-                            backgroundColor: 'rgba(0, 0, 139, 0.8)',
-                            stack: 'Stack 0',
-                        }
-                    ]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        title: {
-                            display: true,
-                            text: 'Loan Repayment Breakdown (Monthly)',
-                        },
-                        legend: {
-                            position: 'top',
-                        },
-                    },
-                    scales: {
-                        x: {
-                            stacked: true,
-                            title: {
-                                display: true,
-                                text: 'Months',
-                            },
-                        },
-                        y: {
-                            stacked: true,
-                            title: {
-                                display: true,
-                                text: 'Amount (₹)',
-                            },
-                        },
-                    },
-                },
-              
-            });
+          remainingPrincipal -= principalComponent;
         }
 
-        function calculate() {
-            const principal = parseFloat(document.getElementById('principal').value);
-            const rate = parseFloat(document.getElementById('rate').value);
-            const years = parseInt(document.getElementById('years').value);
+        const ctx = document.createElement("canvas");
+        ctx.id = "loanChart";
+        document.querySelector("#chartContainer").appendChild(ctx);
 
-            if (isNaN(principal) || isNaN(rate) || isNaN(years) || principal <= 0 || rate <= 0 || years <= 0) {
-                alert('Please enter valid positive numbers for all fields.');
-                return;
-            }
+        new Chart(ctx, {
+          type: "bar",
+          data: {
+            labels: Array.from({ length: months }, (_, i) => `Month ${i + 1}`),
+            datasets: [
+              {
+                label: "Interest",
+                data: interestData,
+                borderColor: "rgba(139, 0, 0, 1)",
+                backgroundColor: "rgba(139, 0, 0, 0.8)",
+                stack: "Stack 0",
+              },
+              {
+                label: "Principal Component",
+                data: principalData,
+                borderColor: "rgba(0, 0, 139, 1)",
+                backgroundColor: "rgba(0, 0, 139, 0.8)",
+                stack: "Stack 0",
+              },
+            ],
+          },
+          options: {
+            responsive: true,
+            plugins: {
+              title: {
+                display: true,
+                text: "Loan Repayment Breakdown (Monthly)",
+              },
+              legend: {
+                position: "top",
+              },
+            },
+            scales: {
+              x: {
+                stacked: true,
+                title: {
+                  display: true,
+                  text: "Months",
+                },
+              },
+              y: {
+                stacked: true,
+                title: {
+                  display: true,
+                  text: "Amount (₹)",
+                },
+              },
+            },
+          },
+        });
+      }
 
-            const resultTable = document.getElementById('resultTable');
-            const resultBody = document.getElementById('resultBody');
-            resultBody.innerHTML = '';
+      function calculate() {
+        const principal = parseFloat(
+          document.getElementById("principal").value
+        );
+        const rate = parseFloat(document.getElementById("rate").value);
+        const years = parseInt(document.getElementById("years").value);
 
-            let remainingPrincipal = principal;
-            const monthlyRate = rate / (12 * 100);
-            const months = years * 12;
-            const emi = (principal * monthlyRate * Math.pow(1 + monthlyRate, months)) / (Math.pow(1 + monthlyRate, months) - 1);
+        if (
+          isNaN(principal) ||
+          isNaN(rate) ||
+          isNaN(years) ||
+          principal <= 0 ||
+          rate <= 0 ||
+          years <= 0
+        ) {
+          alert("Please enter valid positive numbers for all fields.");
+          return;
+        }
 
-            const interestData = [];
-            const principalData = [];
+        const resultTable = document.getElementById("resultTable");
+        const resultBody = document.getElementById("resultBody");
+        resultBody.innerHTML = "";
 
-            for (let month = 1; month <= months; month++) {
-                const interest = remainingPrincipal * monthlyRate;
-                const principalComponent = emi - interest;
+        let remainingPrincipal = principal;
+        const monthlyRate = rate / (12 * 100);
+        const months = years * 12;
+        const emi =
+          (principal * monthlyRate * Math.pow(1 + monthlyRate, months)) /
+          (Math.pow(1 + monthlyRate, months) - 1);
 
-                interestData.push(interest);
-                principalData.push(principalComponent);
+        const interestData = [];
+        const principalData = [];
 
-                remainingPrincipal -= principalComponent;
-            }
+        for (let month = 1; month <= months; month++) {
+          const interest = remainingPrincipal * monthlyRate;
+          const principalComponent = emi - interest;
 
-            for (let year = 1; year <= years; year++) {
-                const yearInterest = interestData.slice((year - 1) * 12, year * 12).reduce((sum, val) => sum + val, 0);
-                const yearPrincipal = principalData.slice((year - 1) * 12, year * 12).reduce((sum, val) => sum + val, 0);
+          interestData.push(interest);
+          principalData.push(principalComponent);
 
-                const row = document.createElement('tr');
-                row.innerHTML = `
+          remainingPrincipal -= principalComponent;
+        }
+
+        for (let year = 1; year <= years; year++) {
+          const yearInterest = interestData
+            .slice((year - 1) * 12, year * 12)
+            .reduce((sum, val) => sum + val, 0);
+          const yearPrincipal = principalData
+            .slice((year - 1) * 12, year * 12)
+            .reduce((sum, val) => sum + val, 0);
+
+          const row = document.createElement("tr");
+          row.innerHTML = `
                     <td>${year}</td>
                     <td>${yearInterest.toFixed(2)}</td>
                     <td>${yearPrincipal.toFixed(2)}</td>
                 `;
-                resultBody.appendChild(row);
-            }
-
-            resultTable.style.display = 'table';
-
-            // Remove existing chart if present
-            const existingChart = document.getElementById('loanChart');
-            if (existingChart) {
-                existingChart.remove();
-            }
-
-            drawGraph(principal, rate, years);
-              calculateTotalInterest(interestData);
+          resultBody.appendChild(row);
         }
-        function calculateTotalInterest(interestData) {
-                const totalInterest = interestData.reduce((sum, val) => sum + val, 0);
-                document.getElementById('totalInterest').textContent = totalInterest.toFixed(2);
-            }
-   </script>
-</body>
-</html></html>
+
+        resultTable.style.display = "table";
+
+        // Remove existing chart if present
+        const existingChart = document.getElementById("loanChart");
+        if (existingChart) {
+          existingChart.remove();
+        }
+
+        drawGraph(principal, rate, years);
+        calculateTotalInterest(interestData);
+      }
+      function calculateTotalInterest(interestData) {
+        const totalInterest = interestData.reduce((sum, val) => sum + val, 0);
+        document.getElementById("totalInterest").textContent =
+          totalInterest.toFixed(2);
+      }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  </body>
+</html>
